--- a/Jupyter/Day06/day 6 puzzle.ipynb
+++ b/Jupyter/Day06/day 6 puzzle.ipynb
@@ -23,6 +23,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Read input\n",
+    "\n",
+    "First we read all lines from the input file."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read 300 lines of instructions\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"input.txt\", \"r\") as file:\n",
+    "    lines=file.readlines()\n",
+    "print( f\"Read {len(lines)} lines of instructions\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Then we parse them with regular expressions:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Parsed 300 instructions\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "instructions = []\n",
+    "for line in lines:\n",
+    "    match = re.search(\"(turn on|turn off|toggle) (\\d*),(\\d*) through (\\d*),(\\d*)\", line)\n",
+    "    if match:\n",
+    "        instructions.append({\n",
+    "            'command': result.group(1),\n",
+    "            'x1': result.group(2),\n",
+    "            'y1': result.group(3),\n",
+    "            'x2': result.group(4),\n",
+    "            'y2': result.group(5)\n",
+    "        })\n",
+    "print(f\"Parsed {len(instructions)} instructions\")        \n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
